--- a/webapp/templates/auth/register.html
+++ b/webapp/templates/auth/register.html
@@ -11,7 +11,9 @@
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" required>
+    <input type="email" name="email" id="email">
+    <label for="devpassword">Development password</label>
+    <input type="password" name="devpassword" id="devpassword" required>
     <input type="submit" value="Register">
   </form>
 {% endblock %}
